# volvere-sales-agent

./: .gitignore  Dockerfile  agent.py  config.py  database.py  hubspot.py  pyproject.toml  requirements.txt  scheduler.py  telegram_alerts.py  telegram_bot.py  web.py
skills/: prompts.py
