[project]
name = "volvere-sales-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
]
